Fixing spacing on portfolio lightbox pages and added in the last of the content for now.

--- a/index.html
+++ b/index.html
@@ -111,39 +111,43 @@ layout: default
         </div>
       </div>
 
-      <div class=" portfolio-slide-open" id="portfolio-piece-2">
-        <a href="#portfolio-work" class="unit exit">
-          <p>↩</p>
-        </a>
-        <div class="unit text">
-          <h3 class="unit portfolio-title">Old James</h3>
-          <div class="portfoliocontent">
-            <div class="grid">
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/oldjames/oldj1.jpg" class="portimages">
-              </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/oldjames/oldj2.jpg" class="portimages">
-              </div>
+        <div class=" portfolio-slide-open" id="portfolio-piece-2">
+          <a href="#portfolio-work" class="unit exit">
+            <p>↩</p>
+          </a>
+          <div class="unit text">
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Old James</h3>
             </div>
-            <div class="grid">
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/oldjames/oldj3.jpg" class="portimages">
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/oldj1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/oldj2.jpg" class="portimages">
+                </div>
               </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/oldjames/oldj4.jpg" class="portimages">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/oldj3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/oldj4.jpg" class="portimages">
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
       <div class=" portfolio-slide-open" id="portfolio-piece-3">
         <a href="#portfolio-work" class="unit exit">
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
+            </div>
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -174,7 +178,9 @@ layout: default
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">Wine Bottle Brand</h3>
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Wine Bottle Brand</h3>
+            </div>
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -199,7 +205,9 @@ layout: default
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">Haunt : Photography</h3>
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Haunt : Photography</h3>
+            </div>
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -230,7 +238,9 @@ layout: default
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">Nature : Photography</h3>
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Nature : Photography</h3>
+            </div>
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -274,12 +284,65 @@ layout: default
         </div>
       </div>
 
+      <div class=" portfolio-slide-open" id="portfolio-piece-7">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Abstract Poster Design</h3>
+            </div>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/2.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/0.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/4.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/5.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/6.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/7.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/8.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/10.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/11.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/12.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/poster/13.jpg" class="portimages">
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
       <div class=" portfolio-slide-open" id="portfolio-piece-8">
         <a href="#portfolio-work" class="unit exit">
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
+            </div>
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -307,6 +370,33 @@ layout: default
                   <img src="images/spreads/spread8.jpg" class="portimages">
                 </div>
                 </div>
+            </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-9">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+            <div class="portfolio-title-div">
+              <h3 class="unit portfolio-title">Ragtime Re-Branding</h3>
+            </div>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/ragtime/ragtime1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/ragtime/ragtime2.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/ragtime/ragtime3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/ragtime/ragtime4.jpg" class="portimages">
+                </div>
+              </div>
             </div>
         </div>
       </div>
