Adding small descriptions for each portfolio piece.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ layout: default
         <div class="text">
           <div class="portfolio-title-div">
             <h3 class="portfolio-title">Digital Curve : Font Creation</h3>
+            <p class="portfoliosubheads">Font created for typography class</p>
           </div>
-          <p class="portfoliosubheads">-- The Sketches</p>
           <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
               <img src="images/fontspecimine/sketches1.jpg" class="portimages">
@@ -84,7 +84,6 @@ layout: default
               <img src="images/fontspecimine/sketches3.jpg" class="portimages">
             </div>
           </div>
-            <p class="portfoliosubheads">-- The Font</p>
           <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
               <img src="images/fontspecimine/caps.jpg" class="portimages">
@@ -96,7 +95,6 @@ layout: default
               <img src="images/fontspecimine/numbers.jpg" class="portimages">
             </div>
           </div>
-            <p class="portfoliosubheads">-- The Application</p>
           <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
               <img src="images/fontspecimine/fspecimine.jpg" class="portimages">
@@ -118,6 +116,7 @@ layout: default
           <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Old James</h3>
+              <p class="portfoliosubheads">logo Re-Brand for Toronto/Ottawa band</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -147,6 +146,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
+              <p class="portfoliosubheads">re-designing some of my favourite albums for a self project [ with exception of TRUNK album ]</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -180,6 +180,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Wine Bottle Brand</h3>
+              <p class="portfoliosubheads">Future personal brand for self wine making</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -207,6 +208,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Haunt : Photography</h3>
+              <p class="portfoliosubheads">Photograph series mirroring the haunting of human fears [taken with Polaroid camera] </p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -239,7 +241,8 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Nature : Photography</h3>
+              <h3 class="unit portfolio-title">Sun, moon, and stars : Photography</h3>
+              <p class="portfoliosubheads">nature and long exposure photographs [taken with Nikon D90 camera] </p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -291,6 +294,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Abstract Poster Design</h3>
+              <p class="portfoliosubheads">self abstract poster project created with photograhs and pen and ink</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -342,6 +346,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
+              <p class="portfoliosubheads">magazine spreads created for typography class [own photography used]</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
@@ -381,6 +386,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Ragtime Re-Branding</h3>
+              <p class="portfoliosubheads">re-branded and created full brand guideline for ottawa shop for graphic design class [not used by ragtime]  </p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
