Small spacing changes.

--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@ layout: default
             <p class="info infoinfo">I have an immense passion for art and design and using that passion to help people with their businesses, hobbies, and brands. I specialize in print design, re-branding, and photography.I always put the needs of my clients first then add a little bit of my clean cut but edgy style into it as well.</p>
             <p class="info infoinfo"><i>PRINT DESIGN:</i> Posters, album covers, books, labels, cards, you name it.</p>
             <p class="info infoinfo"><i>BRANDING:</i> I can change your look to suit your needs and create something unique and most importantly, something you will be proud to show off!</p>
-            <p class="info infoinfo"><i>PHOTOGRAPHY:</i> To add to websites, posters, albums, of your band, shops, and more. I enjoy dark and moody photography as much as I love sunny and bright photography. Contrast is key. I love the challenge of getting both into one photograph.</p>
+            <p class="info infoinfo"><i>PHOTOGRAPHY:</i> To add to websites, posters, albums, of your band, shops, and more. I enjoy dark and moody photography as much as I love sunny and bright photography. Contrast is key.</p>
             <p class="info infoinfo infoemailyellow">Get in touch! I'd love to chat <i>hey@jesspaget.ca</i></p>
             <p class="info infoinfo infoemail">social media links below</p>
           </div>
