--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Ragtime Re-Branding</h3>
-              <p class="portfoliosubheads">re-branded and created full brand guideline for ottawa shop for graphic design class [not used by ragtime]  </p>
+              <p class="portfoliosubheads">re-branded and created full brand guideline for ottawa shop in graphic design class</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
