Changing portfolio piece covers to own photographs.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ layout: default
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-3" class="hover-box">
-              <img class="port-box" src="images/albums/tameimpala.jpg" alt="portfolio-piece-three">
+              <img class="port-box" src="images/covers/albumcover.jpg" alt="portfolio-piece-three">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-4" class="hover-box">
-              <img class="port-box" src="images/liquidhappiness/cover.jpg" alt="portfolio-piece-four">
+              <img class="port-box" src="images/covers/liquidhappinesscover.jpg" alt="portfolio-piece-four">
               <p>Branding</p>
             </a>
         </div>
@@ -49,7 +49,7 @@ layout: default
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-8" class="hover-box">
-              <img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-eight">
+              <img class="port-box" src="images/covers/magazinecover.jpg" alt="portfolio-piece-eight">
               <p>Print Design</p>
             </a>
         </div>
@@ -194,7 +194,7 @@ layout: default
                   <img src="images/liquidhappiness/final.jpg" class="portimages">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/liquidhappiness/bottle.jpg" class="portimages">
+                  <img src="images/covers/liquidhappinesscover.jpg" class="portimages">
                 </div>
               </div>
             </div>
