re-writing the alt tags

--- a/index.html
+++ b/index.html
@@ -7,55 +7,55 @@ layout: default
       <div class="grid port-squares">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-1" class="hover-box">
-              <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one">
+              <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="font design poster">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-2" class="hover-box">
-              <img class="port-box" src="images/oldjames.jpg" alt="portfolio-piece-two">
+              <img class="port-box" src="images/oldjames.jpg" alt="band tshirt logo">
               <p>Branding</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-3" class="hover-box">
-              <img class="port-box" src="images/covers/albumcover.jpg" alt="portfolio-piece-three">
+              <img class="port-box" src="images/covers/albumcover.jpg" alt="album cover redesign">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-4" class="hover-box">
-              <img class="port-box" src="images/covers/liquidhappinesscover.jpg" alt="portfolio-piece-four">
+              <img class="port-box" src="images/covers/liquidhappinesscover.jpg" alt="wine bottle label">
               <p>Branding</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-5" class="hover-box">
-              <img class="port-box" src="images/haunt/cover.jpg" alt="portfolio-piece-five">
+              <img class="port-box" src="images/haunt/cover.jpg" alt="black and white ghost photography">
               <p>Photography</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-6" class="hover-box">
-              <img class="port-box" src="images/nature/cover.jpg" alt="portfolio-piece-six">
+              <img class="port-box" src="images/nature/cover.jpg" alt="nighttime star photography">
               <p>Photography</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-7" class="hover-box">
-              <img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-seven">
+              <img class="port-box" src="images/poster5.jpg" alt="abstract poster">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-8" class="hover-box">
-              <img class="port-box" src="images/covers/magazinecover.jpg" alt="portfolio-piece-eight">
+              <img class="port-box" src="images/covers/magazinecover.jpg" alt="magazine spread">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-9" class="hover-box">
-              <img class="port-box" src="images/ragtime.jpg" alt="portfolio-piece-nine">
+              <img class="port-box" src="images/ragtime.jpg" alt="ragtime logo re-design">
               <p>Branding</p>
             </a>
         </div>
