Changing portfolio pieces around and adding new ones, deleting some. Compressed all images.

--- a/index.html
+++ b/index.html
@@ -7,55 +7,55 @@ layout: default
       <div class="grid port-squares">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-1" class="hover-box">
-              <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="font design poster">
+              <img class="port-box" src="images/covers/yellow.jpg" alt="geometric line drawing">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-2" class="hover-box">
-              <img class="port-box" src="images/oldjames.jpg" alt="band tshirt logo">
+              <img class="port-box" src="images/covers/oldjames.jpg" alt="band tshirt logo">
               <p>Branding</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-3" class="hover-box">
-              <img class="port-box" src="images/covers/albumcover.jpg" alt="album cover redesign">
+              <img class="port-box" src="images/covers/trunk.jpg" alt="album cover redesign">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-4" class="hover-box">
-              <img class="port-box" src="images/covers/liquidhappinesscover.jpg" alt="wine bottle label">
+              <img class="port-box" src="images/covers/liquidhappiness.jpg" alt="wine bottle label">
               <p>Branding</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-5" class="hover-box">
-              <img class="port-box" src="images/haunt/cover.jpg" alt="black and white ghost photography">
+              <img class="port-box" src="images/covers/haunt.jpg" alt="black and white ghost photography">
               <p>Photography</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-6" class="hover-box">
-              <img class="port-box" src="images/nature/cover.jpg" alt="nighttime star photography">
+              <img class="port-box" src="images/covers/sunmoonstars.jpg" alt="nighttime star photography">
               <p>Photography</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-7" class="hover-box">
-              <img class="port-box" src="images/poster5.jpg" alt="abstract poster">
+              <img class="port-box" src="images/covers/2001.jpg" alt="abstract poster of 2001 : a space oddyssey">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-8" class="hover-box">
-              <img class="port-box" src="images/covers/magazinecover.jpg" alt="magazine spread">
+              <img class="port-box" src="images/covers/magazine.jpg" alt="magazine spread">
               <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-9" class="hover-box">
-              <img class="port-box" src="images/ragtime.jpg" alt="ragtime logo re-design">
+              <img class="port-box" src="images/covers/ragtime.jpg" alt="ragtime logo re-design">
               <p>Branding</p>
             </a>
         </div>
@@ -75,35 +75,35 @@ layout: default
           </div>
           <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches1.jpg" class="portimages">
+              <img src="images/fontspecimine/sketches1.jpg" class="portimages" alt="uppercase font design sketches">
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches2.jpg" class="portimages">
+              <img src="images/fontspecimine/sketches2.jpg" class="portimages" alt="lowercase font design sketches">
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches3.jpg" class="portimages">
-            </div>
-          </div>
-          <div class="grid">
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/caps.jpg" class="portimages">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/lower.jpg" class="portimages">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/numbers.jpg" class="portimages">
+              <img src="images/fontspecimine/sketches3.jpg" class="portimages" alt="numbers and symbols for font design sketches">
             </div>
           </div>
           <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspecimine.jpg" class="portimages">
+              <img src="images/fontspecimine/caps.jpg" class="portimages" alt="vector uppercase font design">
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspec2.jpg" class="portimages">
+              <img src="images/fontspecimine/lower.jpg" class="portimages" alt="vector lowercase font design">
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspec3.jpg" class="portimages">
+              <img src="images/fontspecimine/numbers.jpg" class="portimages" alt="vector symbols for font design">
+            </div>
+          </div>
+          <div class="grid">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+              <img src="images/fontspecimine/fspecimine.jpg" class="portimages" alt="font design poster">
+            </div>
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+              <img src="images/fontspecimine/fspec2.jpg" class="portimages" alt="font design poster">
+            </div>
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+              <img src="images/fontspecimine/fspec3.jpg" class="portimages" alt="font design poster">
             </div>
           </div>
         </div>
@@ -121,18 +121,18 @@ layout: default
             <div class="portfoliocontent">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/oldjames/oldj1.jpg" class="portimages">
+                  <img src="images/oldjames/oldj1.jpg" class="portimages" alt="old james logo version one">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/oldjames/oldj2.jpg" class="portimages">
+                  <img src="images/oldjames/oldj2.jpg" class="portimages" alt="old james logo version two">
                 </div>
               </div>
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/oldjames/oldj3.jpg" class="portimages">
+                  <img src="images/oldjames/oldj3.jpg" class="portimages" alt="old james logo version three">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/oldjames/oldj4.jpg" class="portimages">
+                  <img src="images/oldjames/oldj4.jpg" class="portimages" alt="old james logo final version">
                 </div>
               </div>
             </div>
