Adding new content to portfolio pieces and fixing spacing.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ layout: default
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-3" class="hover-box">
-              <img class="port-box" src="images/covers/trunk.jpg" alt="album cover redesign">
-              <p>Print Design</p>
+              <img class="port-box" src="images/covers/trunk.jpg" alt="album cover design">
+              <p>Print Design / Branding</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-4" class="hover-box">
-              <img class="port-box" src="images/covers/liquidhappiness.jpg" alt="wine bottle label">
+              <img class="port-box" src="images/covers/liquidhappiness.jpg" alt="wine and liquor bottle label">
               <p>Branding</p>
             </a>
         </div>
@@ -70,40 +70,34 @@ layout: default
         </a>
         <div class="text">
           <div class="portfolio-title-div">
-            <h3 class="portfolio-title">Digital Curve : Font Creation</h3>
-            <p class="portfoliosubheads">Font created for typography class</p>
+            <h3 class="portfolio-title">Robotic Sight</h3>
+            <p class="portfoliosubheads">Clothing design made from redbubble.com</p>
           </div>
-          <div class="grid">
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches1.jpg" class="portimages" alt="uppercase font design sketches">
+          <div class="portfolio-content">
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <img src="images/yellow/1.jpg" class="portimages" alt="line drawing scanned from sketchbook">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <img src="images/yellow/2.jpg" class="portimages" alt="line drawing vectorized with yellow background">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <img src="images/yellow/face.jpg" class="portimages" alt="vectorized drawing edited and shapes added">
+              </div>
             </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches2.jpg" class="portimages" alt="lowercase font design sketches">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/sketches3.jpg" class="portimages" alt="numbers and symbols for font design sketches">
-            </div>
-          </div>
-          <div class="grid">
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/caps.jpg" class="portimages" alt="vector uppercase font design">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/lower.jpg" class="portimages" alt="vector lowercase font design">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/numbers.jpg" class="portimages" alt="vector symbols for font design">
-            </div>
-          </div>
-          <div class="grid">
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspecimine.jpg" class="portimages" alt="font design poster">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspec2.jpg" class="portimages" alt="font design poster">
-            </div>
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-              <img src="images/fontspecimine/fspec3.jpg" class="portimages" alt="font design poster">
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/leggings.jpg" class="portimages" alt="design placed on women's leggings">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/scarf.jpg" class="portimages" alt="design placed on scarf">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/skirt.jpg" class="portimages" alt="design placed on pencil skirt">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/tshirt.jpg" class="portimages" alt="design placed on tshirt">
+              </div>
             </div>
           </div>
         </div>
@@ -120,19 +114,31 @@ layout: default
             </div>
             <div class="portfoliocontent">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj1.jpg" class="portimages" alt="old james logo version one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/oldjames/sketch1.jpg" class="portimages" alt="old james logo edits">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj2.jpg" class="portimages" alt="old james logo version two">
                 </div>
               </div>
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj3.jpg" class="portimages" alt="old james logo version three">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/oldjames/sketch.jpg" class="portimages" alt="old james logo final sketch">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj4.jpg" class="portimages" alt="old james logo final version">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/shirt.jpg" class="portimages" alt="old james logo on men's t-shirt">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/oldjames/womens.jpg" class="portimages" alt="old james logo on women's t-shirt">
                 </div>
               </div>
             </div>
